# mcp-cli

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md
docs/: performance-comparison.md
golang/: cli_test.go  client.go  client_test.go  commands.go  config.go  config_test.go  daemon.go  daemon_test.go  errors.go  errors_test.go  filter_test.go  go.mod  go.sum  grep_test.go  main.go  output.go  output_test.go  signal_unix.go
rust/: Cargo.toml
rust/src/: client.rs  commands.rs  config.rs  daemon.rs  daemon_client.rs  errors.rs  main.rs  output.rs
